--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -297,8 +297,16 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .list-group-item.active svg path,
-.list-group-item:hover svg path {
+.list-group-item:not(.works-btn):hover svg path {
   fill: #fff;
+}
+/* .list-group-item.active svg path, */
+.list-group-item.works-btn:hover svg path:first-child {
+  stroke: #fff;
+}
+.list-group-item.works-btn:hover svg path:last-child {
+  stroke: #fff;
+  fill:#ffffff;
 }
 
 .down-list svg path {
