--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -307,7 +307,6 @@ input[type=number]::-webkit-inner-spin-button {
 }
 .list-group-item.works-btn.active svg path:last-child,
 .list-group-item.works-btn:hover svg path:last-child {
-  stroke: #fff;
   fill:#ffffff;
 }
 
@@ -2382,7 +2381,8 @@ a.wd-send-btn {
 
 /*scrollbar*/
 .chat_box .scrollbar {
-  height: 832px;
+  height: calc(100% - 77px);
+  /* height: 832px; */
   overflow-x: hidden;
 }
 
