--- a/public/assets/css/globle.css
+++ b/public/assets/css/globle.css
@@ -501,11 +501,13 @@ span.grey {
 .review-count-bar span {margin-right: 10px;}
 /* User Feedback Page */
 
+
 @media (min-width:992px) {
     .jobsrch_form_blog .form-group.where_custom {
-        padding: 15px 30px;
+        padding: 10px 40px;
     }
 
+    .jobsrch_form_blog .form-group.drop_off_box label,
     .jobsrch_form_blog .form-group.where_custom label {
         font-size: 20px;
         font-weight: 500;
