--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -389,7 +389,7 @@ input[type=number]::-webkit-inner-spin-button {
   padding: 0 0 0 40px;
   min-height: unset;
   position: relative;
-  overflow:hidden;
+  /* overflow:hidden; */
 }
 
 .side_dropdown .card-body::before {
