--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -388,11 +388,14 @@ input[type=number]::-webkit-inner-spin-button {
 .side_dropdown .card-body {
   padding: 0 0 0 40px;
   min-height: unset;
-  position: relative;
+  
   /* overflow:hidden; */
 }
-
-.side_dropdown .card-body::before {
+#collapseOne {
+  position: relative;
+}
+#collapseOne:before {
+/* .side_dropdown .card-body::before { */
   content: '';
   border-left: 1px solid #CFCFCF;
   height: -webkit-fill-available;
@@ -6245,7 +6248,8 @@ div#spam-banner button.btn {
   }
 }
 @media (max-width: 767px) {
-  .side_dropdown .card-body::before {
+  #collapseOne:before {
+  /* .side_dropdown .card-body::before { */
     left: 20px;
   }
 
