--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -391,11 +391,10 @@ input[type=number]::-webkit-inner-spin-button {
   
   /* overflow:hidden; */
 }
-#collapseOne {
+.side_dropdown .list-group-item[aria-expanded="true"] ~ div {
   position: relative;
 }
-#collapseOne:before {
-/* .side_dropdown .card-body::before { */
+.side_dropdown .list-group-item[aria-expanded="true"] ~ div:before {
   content: '';
   border-left: 1px solid #CFCFCF;
   height: -webkit-fill-available;
@@ -6248,8 +6247,7 @@ div#spam-banner button.btn {
   }
 }
 @media (max-width: 767px) {
-  #collapseOne:before {
-  /* .side_dropdown .card-body::before { */
+  .side_dropdown .list-group-item[aria-expanded="true"] ~ div:before {
     left: 20px;
   }
 
