add scrollbar in the mobile menus

--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -7266,6 +7266,13 @@ button.swal2-confirm.swal2-styled:focus {
   overflow: initial;
 }
 
+.top_menu .list-group,
+.top_menu {
+  height: 85%;
+}
+.top_menu .list-group {
+  overflow: auto;
+}
 
 
 
