--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -1906,7 +1906,10 @@ text.highcharts-credits {
   width: 381px !important;
   max-width: 100%;
 }
-.chat_box .chat_list .chat_list_body {width: 100%;}
+.chat_box .chat_list .chat_list_body {
+  width: 100%;
+  height: 100%;
+}
 
 .chat_header {
   width: 100%;
@@ -1967,7 +1970,7 @@ text.highcharts-credits {
 }
 
 .chat_list_body ul {
-  height: 900px;
+  height: 100%;
   overflow-x: hidden;
 }
 
@@ -2107,6 +2110,7 @@ span.chat_count {
   margin: 0 auto;
   text-align: center;
   max-width: calc(100% - 381px);
+  height: calc(100vh - 263px);
 }
 
 .chat_conversation_header {
@@ -2161,7 +2165,7 @@ span.chat_count {
 }
 
 .chat_conversation_body {
-  padding: 20px 20px 60px 20px;
+  padding: 20px 20px 80px 20px;
   background: #F3F3F3;
   border: 1px solid #DADADA;
 }
@@ -6249,7 +6253,7 @@ div#spam-banner button.btn {
   .chat_list {
       display: flex!important;
       flex-wrap: wrap;
-      align-items: center;
+      /* align-items: center; */
       justify-content: center;
       /* width: 381px !important;
       max-width: 100%; */
@@ -6259,6 +6263,7 @@ div#spam-banner button.btn {
  
   .side_dropdown .list-group-item[aria-expanded="true"] ~ div:before {
     left: 20px;
+    display: none;
   }
 
   /*Dropdown*/
@@ -8048,8 +8053,13 @@ g.highcharts-input-group {
 }
 
 @media(min-width: 1300px) {
+  .container-job .chat_box,
   .message_container .chat_box {
     height: calc(100vh - 263px);
     overflow: hidden;
   }
+  .wd-active-job.new_message_section .chat_box {
+    height: calc(100vh - 363px);
+  }
+  .wd-active-job.new_message_section .chat_box .chat_conversation {height:calc(100vh - 363px);}
 }
