--- a/public/assets/web/css/style.css
+++ b/public/assets/web/css/style.css
@@ -2623,6 +2623,7 @@ i.fas.fa-check {
   font-weight: 400;
   max-width: 266px !important;
   width: 100%;
+  margin: 24px auto;
 }
 .iti {
   width: 100%;
