--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -5529,9 +5529,9 @@ div#spam-banner button.btn {
     padding: 30px 30px 0 30px;
   }
 
-  .admin_job_bx .list_detail p {
-    white-space: nowrap;
-  }
+  /*.admin_job_bx .list_detail p {*/
+  /*  white-space: nowrap;*/
+  /*}*/
 
   .admin_job_bx .tab-content ul li {
     overflow: scroll;
