--- a/public/assets/web/css/style.css
+++ b/public/assets/web/css/style.css
@@ -453,7 +453,7 @@ input[type=number]::-webkit-inner-spin-button {
   border: 1.2px solid #e2e2e2;
   border-radius: 10px;
   padding: 16px 20px;
-  height: 100%;
+  /* height: 100%; */
 }
 .wd_email_form form{
   margin-top: 15px;
