--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -4324,8 +4324,12 @@ a.wd-leave-btn {
   font-size: 16px;
   font-weight: 400;
   color: #0356D6;
-  padding: 16px 29px 15px 16px;
+  padding: 15px 29px 16px 16px;
   margin: 0;
+  line-height: 21px;
+  border-radius: 0 0 10px 10px;
+  background-color: #ffffff;
+  margin-bottom: 3px;
 }
 
 .wd-quote-photo {
