--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -4009,7 +4009,7 @@ a.wd-leave-btn {
 
 .wd-quote-data {
   border-radius: 10px;
-  border: 1px solid #BABABA;
+  /* border: 1px solid #BABABA; */
   background: #f9f9f9;
   margin: 24px 0 0;
 }
