--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -3184,7 +3184,7 @@ a.chat_cross {
   border-radius: 5px;
   background: #fff;
   /* height: calc(100vh - 172px); */
-  height: calc(100vh - 80px);
+  height: calc(60vh - 80px);
 }
 
 .wd-deliver-lft {
@@ -7174,7 +7174,7 @@ button.swal2-confirm.swal2-styled:focus {
 }
 
 .great_job_sec {
-  padding: 40px 20px 0;
+  padding: 40px 20px;
   background: #fff;
 }
 
