--- a/public/assets/web/css/style.css
+++ b/public/assets/web/css/style.css
@@ -8,6 +8,8 @@
 @import url('./login.css');
 @import url('./chat.css');
 
+.social-icons li a svg {transition: fill 0.25s ease-in-out 0s;}
+.social-icons li a:hover svg {fill:#3B5998;}
 /*----- BASIC -----*/
 html, body{
   height: auto;
