--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -8108,3 +8108,9 @@ g.highcharts-input-group {
   } */
   .wd-active-job.new_message_section .chat_box .chat_conversation {height:100%;}
 }
+@media (max-width: 767px) {
+  .foot_img {
+      text-align: left;
+      margin: 0 0 30px;
+  }
+}
