--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -388,10 +388,13 @@ input[type=number]::-webkit-inner-spin-button {
 .side_dropdown .card-body {
   padding: 0 0 0 40px;
   min-height: unset;
+  
+  /* overflow:hidden; */
+}
+.side_dropdown .list-group-item[aria-expanded="true"] ~ div {
   position: relative;
 }
-
-.side_dropdown .card-body::before {
+.side_dropdown .list-group-item[aria-expanded="true"] ~ div:before {
   content: '';
   border-left: 1px solid #CFCFCF;
   height: -webkit-fill-available;
@@ -1189,7 +1192,8 @@ text.highcharts-credits {
   text-align: center;
   margin: 0 auto;
   font-size: 15px;
-  font-weight: 700;
+  /* font-weight: 700; */
+  font-weight: 500;
   line-height: 19px;
   letter-spacing: 0em;
   position: absolute;
@@ -1428,7 +1432,7 @@ text.highcharts-credits {
   font-weight: 400;
   color: #52D017 !important;
   border: 1px solid #52D017;
-  padding: 4px 12px;
+  padding: 4px 30px;
   border-radius: 30px;
 }
 
@@ -1889,16 +1893,22 @@ text.highcharts-credits {
   background: #FFFFFF;
   box-shadow: 0px 13px 35px rgba(0, 0, 0, 0.11);
   display: flex;
+  flex-wrap:wrap;
   height: 100%;
   border-radius: 9px;
   border: 1px solid #DBDBDB;
 }
 
 .chat_list {
-  max-width: 381px;
+  /* max-width: 381px;
+  width: 100%; */
+  height: 100%;
+  width: 381px !important;
+  max-width: 100%;
+}
+.chat_box .chat_list .chat_list_body {
   width: 100%;
   height: 100%;
-
 }
 
 .chat_header {
@@ -1960,7 +1970,7 @@ text.highcharts-credits {
 }
 
 .chat_list_body ul {
-  height: 900px;
+  height: 100%;
   overflow-x: hidden;
 }
 
@@ -2099,6 +2109,9 @@ span.chat_count {
   display: block;
   margin: 0 auto;
   text-align: center;
+  max-width: calc(100% - 381px);
+  height: 100%;
+  /* height: calc(100vh - 263px); */
 }
 
 .chat_conversation_header {
@@ -2123,18 +2136,20 @@ span.chat_count {
   color: #000;
 }
 
-.chat_conversation_header img {
+/* .chat_conversation_header img {
   width: 40px;
   height: 40px;
   object-fit: contain;
   border-radius: 50%;
-}
+} */
 
 .conversation_user h3 {
-  font-weight: 500;
-  font-size: 20px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
   color: #282828;
   margin-bottom: 5px;
+  text-transform: capitalize;
 }
 
 .conversation_user p {
@@ -2151,9 +2166,11 @@ span.chat_count {
 }
 
 .chat_conversation_body {
-  padding: 20px 20px 60px 20px;
+  /* padding: 20px 20px 80px 20px; */
+  padding: 20px;
   background: #F3F3F3;
   border: 1px solid #DADADA;
+  border-bottom: none;
 }
 
 .chat_conversation .time {
@@ -2307,7 +2324,7 @@ span.chat_count {
   background: #fff;
   border-radius: 0px 0 10px 0;
   padding: 10px 20px;
-  position: absolute;
+  position: sticky;
   bottom: 0;
   left: 0;
   right: 0;
@@ -2384,9 +2401,10 @@ a.wd-send-btn {
 
 /*scrollbar*/
 .chat_box .scrollbar {
-  height: calc(100% - 77px);
-  /* height: 832px; */
+  /* max-height: calc(100% - 174px); */
+  height: calc(100% - 174px);
   overflow-x: hidden;
+  /* min-height: calc(100% - 174px); */
 }
 
 #style-1::-webkit-scrollbar-track {
@@ -2878,7 +2896,7 @@ a.chat_cross {
   font-weight: 600;
 }
 
-.admin-header .navbar .menu-item:last-child a {
+.admin-header .navbar .menu-item:last-child:not(.active) a {
   margin-right: 0;
 }
 
@@ -2940,6 +2958,10 @@ a.chat_cross {
   background: #fff;
   padding: 50px 57px;
   border-radius: 5px;
+}
+.message-color .message_container {height: calc(100vh - 50px);}
+.message-color .active-job-box {
+  height:calc(100vh - 172px);
 }
 
 .wd-active-job {
@@ -3161,7 +3183,8 @@ a.chat_cross {
   border: 1px solid #B9B9B9;
   border-radius: 5px;
   background: #fff;
-  height: calc(100vh - 172px);
+  /* height: calc(100vh - 172px); */
+  /* height: calc(100vh - 80px); */
 }
 
 .wd-deliver-lft {
@@ -3202,8 +3225,10 @@ a.chat_cross {
   font-size: 20px;
   font-weight: 400;
   border-bottom: 1px solid #FFFFFF33;
-  padding: 0 0 15px;
-  margin: 0 0 12px;
+  /* padding: 0 0 15px;
+  margin: 0 0 12px; */
+  padding: 0 0 30px;
+  margin: 0 0 30px;
   color: #fff;
 }
 
@@ -4905,8 +4930,11 @@ a.wd-leave-btn {
   border-radius: 5px;
   display: inline-block;
 }
+.yes_btn:disabled {
+  opacity: 0.5;
+}
 
-.yes_btn:hover {
+.yes_btn:not(:disabled):hover {
   background: transparent;
   color: #52D017;
 }
@@ -5504,9 +5532,9 @@ div#spam-banner button.btn {
     padding: 30px 30px 0 30px;
   }
 
-  .admin_job_bx .list_detail p {
-    white-space: nowrap;
-  }
+  /*.admin_job_bx .list_detail p {*/
+  /*  white-space: nowrap;*/
+  /*}*/
 
   .admin_job_bx .tab-content ul li {
     overflow: scroll;
@@ -5526,6 +5554,10 @@ div#spam-banner button.btn {
   .wd-admin-profile {
     border-radius: 10px;
     height: auto;
+  }
+  .message-color:not(#messages) .container-job .chat_box, .message-color:not(#messages) .message_container .chat_box {
+    height: calc(100% - 166px);
+    overflow: hidden;
   }
 
   /********************sanjay 26-09-2024*********************/
@@ -5640,10 +5672,6 @@ div#spam-banner button.btn {
     margin: 0 auto;
     text-align: center;
   }
-
-  .chat_title_bx.active_chat_title {
-    display: none;
-  }
 }
 
 @media (max-width: 1024px) {
@@ -5663,7 +5691,6 @@ div#spam-banner button.btn {
 }
 
 @media (max-width: 991px) {
-
   .dropdown-toggle svg,
   .admin-menu svg {
     width: 25px;
@@ -5997,9 +6024,11 @@ div#spam-banner button.btn {
 
   /* Transporter feedback  */
   .wd-white-box {
-    padding: 0;
+    padding: 15px;
     border: 0;
     box-shadow: none;
+    overflow: hidden;
+    position: relative;
   }
 
   .wd-feedback-box {
@@ -6061,15 +6090,19 @@ div#spam-banner button.btn {
     border: none;
     padding: 0 0 40px;
   }
+  .message-color .active-job-box {
+    height: calc(100vh - 116px);
+    padding-bottom: 0;
+  }
 
   .wd-notify {
     display: block;
   }
 
   /* admin past deliveries  */
-  .wd-profl-delivr ul {
+  /* .wd-profl-delivr ul {
     margin: 40px 0 0;
-  }
+  } */
 
   .wd-deliver-lft {
     padding: 29px 24px;
@@ -6232,9 +6265,26 @@ div#spam-banner button.btn {
   }
 }
 
+@media (min-width:768px) {
+  .chat_list {
+      display: flex!important;
+      flex-wrap: wrap;
+      /* align-items: center; */
+      justify-content: center;
+      /* width: 381px !important;
+      max-width: 100%; */
+  }
+}
 @media (max-width: 767px) {
-  .side_dropdown .card-body::before {
+  .message-color .message_container {
+    height: 100%;
+  }
+  .chat_title_bx.active_chat_title {
+    display: none;
+  }
+  .side_dropdown .list-group-item[aria-expanded="true"] ~ div:before {
     left: 20px;
+    display: none;
   }
 
   /*Dropdown*/
@@ -6466,13 +6516,14 @@ div#spam-banner button.btn {
   .chat_conversation_header,
   .chat_header {
     border-radius: 10px 10px 0 0;
-    background: #f3f3f3;
+    /* background: #f3f3f3; */
+    background: #ffffff;
     border: 0;
   }
 
   .chat_conversation_body {
     border: 0;
-    padding: 20px 40px 65px;
+    /* padding: 20px 40px 65px; */
   }
 
   .chat_conversation_footer {
@@ -6498,10 +6549,10 @@ div#spam-banner button.btn {
     border-radius: 0;
   }
 
-  .conversation_user p {
+  /* .conversation_user p {
     flex-direction: row-reverse;
     justify-content: flex-end;
-  }
+  } */
 
   .option_btn::before {
     display: none;
@@ -6525,7 +6576,8 @@ div#spam-banner button.btn {
 
   .chat_head_lft {
     display: flex;
-    align-items: flex-start;
+    /* align-items: flex-start; */
+    align-items: center;
   }
 
   .dp_title {
@@ -6560,9 +6612,9 @@ div#spam-banner button.btn {
     margin: 0 auto;
   }
 
-  .chat_list_body ul {
+  /* .chat_list_body ul {
     height: auto;
-  }
+  } */
 
   .jobsrch_form_blog {
     margin: 36px 0 20px;
@@ -6695,6 +6747,32 @@ div#spam-banner button.btn {
   .get_quote .modal-footer p {
     font-size: 12px;
   }
+  .chat_conversation {height: 100%;}
+  .chat_conversation_footer {
+    /* position: fixed;
+    bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    left: 0; */
+    padding: 0;
+    z-index:9;
+    background: #f3f3f3;
+    border: none;
+    width: 100%;
+    margin: 0;
+  }
+  .chat_box .scrollbar {
+    /* height: auto; */
+    height:calc(100vh - 265px);
+  }
+
+  .chat_conversation_footer #chat__form {
+    border-radius: 10px;
+    margin: 0 15px;
+    border: 1px solid #bababa;
+    padding: 5px 12px;
+    background: #fff;
+  }
 }
 
 @media (max-width: 575px) {
@@ -6804,9 +6882,9 @@ div#spam-banner button.btn {
     margin-bottom: 0;
   }
 
-  .admin_del .wd-deliver-box .col-lg-8 {
+  /* .admin_del .wd-deliver-box .col-lg-8 {
     padding-right: 0;
-  }
+  } */
 
   .wd-quote-area {
     margin: 0;
@@ -6899,31 +6977,6 @@ div#spam-banner button.btn {
 
   .admin_account .container-job {
     padding: 40px 25px;
-  }
-
-  .chat_box .scrollbar {
-    height: auto;
-  }
-
-  .chat_conversation_footer {
-    position: fixed;
-    bottom: 0;
-    padding-bottom: 10px;
-    background: #f3f3f3;
-    border: none;
-    width: 100%;
-    left: 0;
-    margin: 0;
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
-  .chat_conversation_footer #chat__form {
-    border-radius: 10px;
-    margin: 0 15px;
-    border: 1px solid #bababa;
-    padding: 5px 12px;
-    background: #fff;
   }
 
   .photo-preview p {
@@ -7118,7 +7171,7 @@ button.swal2-confirm.swal2-styled:focus {
 }
 
 .great_job_sec {
-  padding: 40px 20px;
+  padding: 40px 20px 0;
   background: #fff;
 }
 
@@ -7250,10 +7303,24 @@ button.swal2-confirm.swal2-styled:focus {
   overflow: initial;
 }
 
+.top_menu .list-group {
+  height: 100%;
+}
+.top_menu {
+  height: calc(100% - 55px);
+}
+.top_menu .list-group {
+  overflow: auto;
+}
 
 
 
 @media(max-width: 580px) {
+  .chat_conversation_header {position:sticky; top:0px;}
+  /* .join_network_main .trans_login_blog {padding: 0px 20px; max-width: 100%;} */
+  .chat_accept_btn {padding: 7px 10px;}
+  .chat_box,
+  .chat_conversation_header, .chat_header {border-radius: 0;}
   .great_job_sec p.subheader {
     font-size: 15px;
   }
@@ -7347,10 +7414,6 @@ button.swal2-confirm.swal2-styled:focus {
   .new_message_section .active-job-box {
     margin: 0;
   }
-
-
-
-
 }
 
 @media(max-width: 400px) {
@@ -7761,6 +7824,12 @@ g.highcharts-input-group {
 
 
 @media(max-width: 1199px) {
+  .chat_list {
+    width: 281px!important;
+  }
+  .chat_conversation {
+    max-width: calc(100% - 281px);
+  }
   .active_job_mobile .job-listing .bidding_new_design .bidding_new_design_grid {
     padding-right: 15px;
   }
@@ -7768,6 +7837,9 @@ g.highcharts-input-group {
   .accepted_quotes_row .wd-delivr-rght.new_sec_delivr {
     margin-right: 15px !important;
   }
+  /* .container-job .chat_box, .message_container .chat_box {
+    height: calc(100vh - 170px);
+  } */
 }
 
 @media(max-width: 991px) {
@@ -7797,6 +7869,28 @@ g.highcharts-input-group {
 
 }
 
+@media(max-width: 767px) {
+  .chat_conversation {
+    max-width: 100%;
+  }
+  .chat_list {
+    width: 100% !important;
+  }
+  .chat_box {
+    border: 0;
+    /* height: calc(100vh - 66px); */
+    /* height: 100%; */
+    background: #f3f3f3;
+  }
+  /* .message-color .active-job-box {height: calc(100svh - 105px)} */
+  .message-color .active-job-box {height: auto;}
+  /* .message-color:not(#messages) .container-job .chat_box, .message-color:not(#messages) .message_container .chat_box {
+    height: calc(100% - 214px);
+  } */
+  #messages .active-job-box {
+    height: calc(100svh - 116px)
+  }
+}
 @media(max-width: 580px) {
   .notifaction_sec .dropdown-menu {
     max-width: 100%;
@@ -7815,9 +7909,9 @@ g.highcharts-input-group {
     width: 25px;
   }
 
-  .admin_del .wd-deliver-box .new_dev_delivery .col-lg-8 {
+  /* .admin_del .wd-deliver-box .new_dev_delivery .col-lg-8 {
     padding-right: 15px !important;
-  }
+  } */
 
   .new_dev_delivery .wd-quote-box {
     padding: 30px 20px;
@@ -7828,9 +7922,9 @@ g.highcharts-input-group {
   }
 
 
-  .chat_conversation {
+  /* .chat_conversation {
     height: auto !important;
-  }
+  } */
 
 
   .bidding_new_design {
@@ -7839,7 +7933,7 @@ g.highcharts-input-group {
     row-gap: 0;
     justify-content: space-between;
     padding: 0 10px 5px;
-    margin-top: 30px;
+    margin-top: 15px;
   }
 
   .bidding_new_design_grid {
@@ -7870,8 +7964,11 @@ g.highcharts-input-group {
 
   .new_message_section .chat_box .scrollbar,
   .msg_active_container .chat_box .scrollbar {
-    height: auto;
-    max-height: calc(100vh - 250px);
+    /* height: auto;
+    max-height: calc(100vh - 280px); */
+    height: calc(100% - 222px);
+    /* max-height: calc(100% - 213px);
+    padding-bottom: 0; */
   }
 
   .chat_head_lft {
@@ -7883,10 +7980,15 @@ g.highcharts-input-group {
     transition: none !important;
   }
 
-  section.wd-active-job.new_message_section {
+  #messages .active-job-box {
+    height: calc(100svh - 65px);
+    padding-bottom: 0;
+  }
+
+  /* section.wd-active-job.new_message_section {
     height: calc(100vh - 140px);
     overflow: auto;
-  }
+  } */
 
   ul.menu .noti_info_icon {
     margin-right: 0;
@@ -7968,14 +8070,14 @@ g.highcharts-input-group {
 
 
   .admin_del .wd-deliver-box .new_dev_delivery .col-lg-8.accepted_quotes_row {
-    padding-right: 0 !important;
+    /* padding-right: 0 !important; */
     margin: 0 !important;
-    padding-left: 20px !important;
+    /* padding-left: 20px !important; */
   }
 
-  .admin_del .wd-deliver-box .new_dev_delivery .col-lg-8.accepted_quotes_row .new_sec_delivr {
+  /* .admin_del .wd-deliver-box .new_dev_delivery .col-lg-8.accepted_quotes_row .new_sec_delivr {
     margin-right: -4px !important;
-  }
+  } */
 
   .new_dev_delivery .accepted_quotes_row .wd-quote-box {
     width: 95%;
@@ -7983,14 +8085,10 @@ g.highcharts-input-group {
 
   .new_dev_delivery .accepted_quotes_row .wd-quote-box.accepted_quotes_new {
     width: 100%;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    margin-bottom: 50px;
+    /* border-top-right-radius: 0;
+    border-bottom-right-radius: 0; */
   }
-
-
-
-
-
 }
 
 @media (max-width: 400px) {
@@ -8000,9 +8098,20 @@ g.highcharts-input-group {
 
 }
 
-@media(min-width: 1300px) {
+@media(min-width: 1200px) {
+  .container-job .chat_box,
   .message_container .chat_box {
-    height: calc(100vh - 263px);
+    height:calc(100% - 85px);
     overflow: hidden;
+  }
+  /* .wd-active-job.new_message_section .chat_box {
+    height: calc(100% - 85px);
+  } */
+  .wd-active-job.new_message_section .chat_box .chat_conversation {height:100%;}
+}
+@media (max-width: 767px) {
+  .foot_img {
+      text-align: left;
+      margin: 0 0 30px;
   }
 }
