--- a/public/assets/web/css/style.css
+++ b/public/assets/web/css/style.css
@@ -8,6 +8,8 @@
 @import url('./login.css');
 @import url('./chat.css');
 
+.social-icons li a svg {transition: fill 0.25s ease-in-out 0s;}
+.social-icons li a:hover svg {fill:#3B5998;}
 /*----- BASIC -----*/
 html, body{
   height: auto;
@@ -398,15 +400,15 @@ input[type=number]::-webkit-inner-spin-button {
   border-color: #008ED4;
 }
 .wd_nextbtn {
-  background: #52D017;
-  border: none;
+    background: #52D017;
+    border: none;
     box-shadow: 0px 5px 10px 0px #0148B93B;
     font-size: 20px;
     font-weight: 400;
     display: block;
     padding: 12px 10px;
     color: #fff;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     border-radius: 32px;
     width: 100%;
     max-width: 370px;
@@ -453,7 +455,7 @@ input[type=number]::-webkit-inner-spin-button {
   border: 1.2px solid #e2e2e2;
   border-radius: 10px;
   padding: 16px 20px;
-  height: 100%;
+  /* height: 100%; */
 }
 .wd_email_form form{
   margin-top: 15px;
@@ -2623,6 +2625,7 @@ i.fas.fa-check {
   font-weight: 400;
   max-width: 266px !important;
   width: 100%;
+  margin: 24px auto;
 }
 .iti {
   width: 100%;
@@ -2984,19 +2987,13 @@ form#payment-form .row .form-group label.error {
   font-weight: 400;
   font-size: 14px;
 }
-
-
-
-
-
-
 @media(max-width: 767px){
   #passwordIcon {
     top: 18px;
-}
-#chooseus .getqt_btnincld {
-  margin: 40px auto 0 !important; 
-}
+  }
+  #chooseus .getqt_btnincld {
+    margin: 40px auto 0 !important; 
+  }
 .mob_review .reviewblog img.star_rating {
   display: block;
 }
