--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -1230,9 +1230,9 @@ text.highcharts-credits {
 .job_container {
   padding: 38px 78px 0 69px;
 }
-.job_container.highlight {
+/* .job_container.highlight {
   margin-top:130px;
-}
+} */
 
 .admin_job_bx {
   box-shadow: 0px 4px 7px 0px #8B8B8B40;
