--- a/public/assets/web/css/admin.css
+++ b/public/assets/web/css/admin.css
@@ -6770,7 +6770,8 @@ div#spam-banner button.btn {
     padding-left: 0;
     padding-right: 0;
     left: 0; */
-    padding: 0;
+    padding: 5px 0;
+    border-radius: 0;
     z-index:9;
     background: #f3f3f3;
     border: none;
